--- a/pom.xml
+++ b/pom.xml
@@ -1435,4 +1435,12 @@
     </profile>
   </profiles>
 
+  <distributionManagement>
+    <repository>
+      <id>Hops</id>
+      <name>Hops Repo</name>
+      <url>https://archiva.hops.works/repository/Hops/</url>
+    </repository>
+  </distributionManagement>
+
 </project>
