--- a/hudi-flink/pom.xml
+++ b/hudi-flink/pom.xml
@@ -20,7 +20,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>hudi</artifactId>
-    <groupId>org.apache.hudi</groupId>
+    <groupId>io.hops.hudi</groupId>
     <version>0.7.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -124,22 +124,23 @@
       <version>${kafka.version}</version>
     </dependency>
 
-    <!-- Hadoop -->
+    <!-- Hadoop
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>io.hops.hudi</groupId>
       <artifactId>hadoop-common</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>io.hops.hudi</groupId>
       <artifactId>hadoop-hdfs</artifactId>
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
+      <groupId>io.hops.hudi</groupId>
       <artifactId>hadoop-auth</artifactId>
       <scope>compile</scope>
     </dependency>
+    -->
 
     <!-- Avro -->
     <dependency>
@@ -155,12 +156,13 @@
       <scope>compile</scope>
     </dependency>
 
-    <!-- Hadoop -->
+    <!-- Hadoop
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-mapreduce-client-core</artifactId>
       <scope>compile</scope>
     </dependency>
+    -->
 
     <dependency>
       <groupId>com.beust</groupId>
